[package]
name = "worker"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
json = "0.12.4"
random = "0.14.0"
log = "0.4.20"
env_logger = "0.10.0"
reqwest = { version = "0.11.22", features = ["blocking"] }
